# oapi_openapi_code_generator

./: .gitignore  Cargo.toml  README.md
examples/: basic.yaml
src/: helpers.rs  lib.rs  main.rs  openapi_generator.rs
src/templates/: oapi.rs
src/templates/partials/: operation_examples.hbs  operation_types.hbs  operation_types.rs  parameter_type.hbs  parameter_type.rs  schema.hbs  schema.rs  test_operation_client.rs  validation.rs
