[package]
name = "oapi_generator"
version = "0.0.21"
authors = ["Ivan Bratoev <ivan.g.bratoev@gmail.com>"]
edition = "2018"
license = "ISC"
repository = "https://gitlab.com/amentis/oapi_generator"
description = "Code generator for OpenAPI specifications"
keywords = ["openapi", "swagger", "generator"]
categories = ["template-engine", "web-programming"]

[dependencies]
anyhow = "^1.0.30"
handlebars = "^3.0.0"
heck = "0.3.1"
pretty_env_logger = "0.4.0"
serde_json = "^1.0.50"
json-pointer = "^0.3.0"
serde_yaml = "^0.8.0"
log = "0.4.11"
structopt = "0.3.15"

[features]
patterns = []